Agregando un titulo con estilo

--- a/index.html
+++ b/index.html
@@ -43,10 +43,17 @@
         .normal span  {
             font-weight: bold;
         }
+
+        h1{
+            color: red;
+            text-align: center;
+            font-weight: bold;
+        }
     </style>
 </head>
 
 <body>
+    <h1>Primer ejercicios HTML/CSS</h1>
     <div id="primero">
 
         <p>Lorem ipsum dolor sit amet, <a href="#">consectetuer adipiscing elit</a>.
