agregando un fondo al titulo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             color: red;
             text-align: center;
             font-weight: bold;
+            background-color: bisque;
         }
     </style>
 </head>
